--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "i-notebook-backend",
+  "name": "i-notebook",
   "version": "1.0.0",
-  "description": "iNoteBook- you cloud noebook",
+  "description": "iNoteBook-your cloud notebook",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "express": "^5.2.1",
-    "mongoose": "^9.1.3",
-    "mongoosh": "^0.0.7"
+    "mongoose": "^9.1.3"
   }
 }
