--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
-    
   },
   "dependencies": {
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
     "mongoose": "^9.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
-  
 }
