--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
-    "mongoose": "^9.1.3"
+    "mongoose": "^9.1.3",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
