--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
     "winston": "^3.19.0"
   },
